--- a/manifest.json
+++ b/manifest.json
@@ -6,15 +6,15 @@
         "description": "Enhances Anime handling in Jellyfin by automating season reorganization, tracking filler/canon episodes, and more.",
         "owner": "ahza-code",
         "category": "Anime",
-        "imageUrl": "",
+        "imageUrl": "https://raw.githubusercontent.com/ahza-code/jellyfin-plugin-ronin/main/Images/logo.jpg",
         "versions": [
             {
                 "version": "1.0.0.0",
                 "changelog": "Initial release",
                 "targetAbi": "10.11.0.0",
-                "sourceUrl": "",
-                "checksum": "",
-                "timestamp": "2026-01-02 23:59:00"
+                "sourceUrl": "https://github.com/ahza-code/jellyfin-plugin-ronin/releases/download/v1.0.0.0/ronin-1.0.0.0.zip",
+                "checksum": "10EBA0C1F240FBDA48618315C58AD2B5",
+                "timestamp": "2026-01-03 00:36:00"
             }
         ]
     }
