--- a/manifest.json
+++ b/manifest.json
@@ -11,10 +11,26 @@
             {
                 "version": "1.0.0.0",
                 "changelog": "Initial release",
+                "targetAbi": "10.10.0.0",
+                "sourceUrl": "https://github.com/ahza-code/jellyfin-plugin-ronin/releases/download/v1.0.0.0/ronin-1.0.0.0.zip",
+                "checksum": "10EBA0C1F240FBDA48618315C58AD2B5",
+                "timestamp": "2026-01-03 00:36:00"
+            },
+            {
+                "version": "1.0.0.0",
+                "changelog": "Initial release",
                 "targetAbi": "10.11.0.0",
                 "sourceUrl": "https://github.com/ahza-code/jellyfin-plugin-ronin/releases/download/v1.0.0.0/ronin-1.0.0.0.zip",
                 "checksum": "10EBA0C1F240FBDA48618315C58AD2B5",
                 "timestamp": "2026-01-03 00:36:00"
+            },
+            {
+                "version": "1.0.0.1",
+                "changelog": "Improved AnimeFillerList slug resolution and request throttling",
+                "targetAbi": "10.10.0.0",
+                "sourceUrl": "https://github.com/ahza-code/jellyfin-plugin-ronin/releases/download/v1.0.0.1/ronin-1.0.0.1.zip",
+                "checksum": "00396B0ECDD89A30BD272D0C4FDCCE50",
+                "timestamp": "2026-01-04 17:23:00"
             },
             {
                 "version": "1.0.0.1",
